--- a/src/modules/hocrEditModule/CMakeLists.txt
+++ b/src/modules/hocrEditModule/CMakeLists.txt
@@ -113,7 +113,7 @@ set(LIBRARIES ${LIBRARIES}
     Qt5::Widgets
 )
 
-
+add_compile_options(-fPIC)
 set(SHARED_LINK_LIBRARIES ${LIBRARIES})
 set(STATIC_LINK_LIBRARIES ${LIBRARIES})
 
@@ -152,7 +152,8 @@ if(BUILD_SHARED_LIBS)
   link_directories(${LINK_DIRECTORIES})
   set_property(TARGET ${lib_shared_name} PROPERTY WINDOWS_EXPORT_ALL_SYMBOLS "ON")
   if(UNIX)
-  set_property(TARGET ${lib_shared_name} PROPERTY POSITION_INDEPENDENT_CODE ON)
+      target_compile_options(${lib_shared_name} PRIVATE -fPIC)
+      set_property(TARGET ${lib_shared_name} PROPERTY POSITION_INDEPENDENT_CODE ON)
   endif()
   write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/${lib_shared_name}Version.cmake
     VERSION ${PROJECT_VERSION}
