--- a/src/modules/moduleHttpBeast/CMakeLists.txt
+++ b/src/modules/moduleHttpBeast/CMakeLists.txt
@@ -111,7 +111,7 @@ if(BUILD_SHARED_LIBS)
   )
   set_target_properties(${lib_shared_name} PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS "ON")
   if(UNIX)
-      set_property(TARGET ${lib_shared_name} PROPERTY POSITION_INDEPENDENT_CODE ON)
+      #set_property(TARGET ${lib_shared_name} PROPERTY POSITION_INDEPENDENT_CODE ON)
   endif()
   write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/${lib_shared_name}Version.cmake
     VERSION ${PROJECT_VERSION}
